--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "typescript": "^4.6.4",
     "express": "^4.18.1",
     "body-parser": "^1.20.0",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "node-fetch": "^2.6.7"
   },
   
   "devDependencies": {
     "@types/node": "^17.0.35",
-    "@types/express": "^4.17.13"
+    "@types/express": "^4.17.13",
+    "@types/node-fetch": "^2.6.1"
   },
   
   "scripts": {
