--- a/package.json
+++ b/package.json
@@ -17,7 +17,15 @@
     "@types/node-fetch": "^2.6.1"
   },
   
+  "main": "src/index.ts",
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "package": "tsc && pkg --compress GZip ."
+  },
+  
+  "bin": "build/index.js",
+  "pkg": {
+    "targets": ["latest-linux-x64"],
+    "outputPath": "build"
   }
 }
