Refactoring and Initial Work on Plugin Repo

--- a/.example.env
+++ b/.example.env
@@ -4,4 +4,5 @@
 
 HTTP-PORT=6896
 CONFIG-FILE=config.json
+MONGO-URL=mongodb://localhost:27017/grasscutters
 ALLOWED-IPS=127.0.0.1,localhost,::1,::ffff:127.0.0.1
