--- a/package.json
+++ b/package.json
@@ -2,30 +2,40 @@
   "name": "grasscutter-api",
   "description": "A lightweight API for Grasscutters' applications.",
   "version": "1.0.0",
-  
   "dependencies": {
-    "typescript": "^4.6.4",
-    "express": "^4.18.1",
+    "@types/express-fileupload": "^1.2.2",
     "body-parser": "^1.20.0",
+    "chalk": "^4.1.2",
     "dotenv": "^16.0.1",
-    "node-fetch": "^2.6.7"
+    "express": "^4.18.1",
+    "express-fileupload": "^1.3.1",
+    "figlet": "^1.5.2",
+    "helmet": "^5.1.0",
+    "joi": "^17.6.0",
+    "joi-file-extensions": "^2.0.1",
+    "mongoose": "^6.3.4",
+    "morgan": "^1.10.0",
+    "node-fetch": "^2.6.7",
+    "snowflake-id": "^1.1.0",
+    "typescript": "^4.6.4",
+    "winston": "^3.7.2",
+    "winston-daily-rotate-file": "^4.6.1"
   },
-  
   "devDependencies": {
-    "@types/node": "^17.0.35",
     "@types/express": "^4.17.13",
+    "@types/node": "^17.0.35",
     "@types/node-fetch": "^2.6.1"
   },
-  
   "main": "src/index.ts",
   "scripts": {
     "start": "ts-node src/index.ts",
     "package": "tsc && pkg --compress GZip ."
   },
-  
   "bin": "build/index.js",
   "pkg": {
-    "targets": ["latest-linux-x64"],
+    "targets": [
+      "latest-linux-x64"
+    ],
     "outputPath": "build"
   }
 }
