--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,12 @@
     "target": "es2020",
     "sourceMap": true,
     "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node",
+    "allowJs": true,
+    "resolveJsonModule": true,
     "esModuleInterop": true,
-    "outDir": "build"
+    "outDir": "build",
+    "typeRoots": ["./src/types", "./mode_modules/@types"]
   },
   "exclude": [
     "node_modules"
