--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "dependencies": {
     "@types/express-fileupload": "^1.2.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "chalk": "^4.1.2",
     "dotenv": "^16.0.1",
@@ -13,6 +14,7 @@
     "helmet": "^5.1.0",
     "joi": "^17.6.0",
     "joi-file-extensions": "^2.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.7",
