--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "description": "A lightweight API for Grasscutters' applications.",
   "version": "1.0.0",
   "dependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/express-fileupload": "^1.2.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "chalk": "^4.1.2",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-fileupload": "^1.3.1",
@@ -18,6 +20,7 @@
     "mongoose": "^6.3.4",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.7",
+    "nodemailer": "^6.7.5",
     "snowflake-id": "^1.1.0",
     "typescript": "^4.6.4",
     "winston": "^3.7.2",
