--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/crypto-js": "^4.1.1",
     "@types/express-fileupload": "^1.2.2",
+    "@types/jsonwebtoken": "^8.5.8",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "chalk": "^4.1.2",
@@ -17,6 +18,7 @@
     "joi": "^17.6.0",
     "joi-file-extensions": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
     "mongoose": "^6.3.4",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.7",
