--- a/resources/.example.env
+++ b/resources/.example.env
@@ -3,7 +3,9 @@
 # Modify the fields as you need.
 
 HTTP-PORT=6896
-CONFIG-FILE=config.json
 MONGO-URL=mongodb://localhost:27017/grasscutters
 SIGNING_SECRET=change_me
 ALLOWED-IPS=127.0.0.1,localhost,::1,::ffff:127.0.0.1
+SIGNING-SECRET=change_me,
+ENCRYPTION-KEY=change_me
+MACHINE-ID=1
