--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
   "devDependencies": {
     "@types/node": "^17.0.35",
     "@types/express": "^4.17.13",
-    "@types/node-fetch": "^2.6.1"
+    "@types/node-fetch": "^2.6.1",
+    
+    "@typescript-eslint/parser": "^5.26.0",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    
+    "eslint": "^8.16.0"
   },
   
   "main": "src/index.ts",
