--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.35",
-    "@types/node-fetch": "^2.6.1"
+    "@types/node-fetch": "^2.6.1",
+    "nodemon": "^2.0.16"
   },
   "main": "src/index.ts",
   "scripts": {
     "start": "ts-node src/index.ts",
+    "start-dev": "nodemon src/index.ts",
     "package": "tsc && pkg --compress GZip ."
   },
   "bin": "build/index.js",
