--- a/resources/.example.env
+++ b/resources/.example.env
@@ -6,6 +6,6 @@ HTTP-PORT=6896
 MONGO-URL=mongodb://localhost:27017/grasscutters
 SIGNING_SECRET=change_me
 ALLOWED-IPS=127.0.0.1,localhost,::1,::ffff:127.0.0.1
-SIGNING-SECRET=change_me,
+SIGNING-SECRET=change_me
 ENCRYPTION-KEY=change_me
 MACHINE-ID=1
